Fix issue with modal on narrower displays
add margin of 2em for all inputs

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -27,12 +27,11 @@ form h4 {
 input {
   border-style: none;
   border-bottom: solid #000 3px;
-  margin-left: 2em;
-  margin-right: 2em;
+  margin: 2em;
   width: 18em;
 }
 form {
-  padding-bottom: 3em;
+  padding-bottom: 2em;
 }
 #navbar-toggle-cbox {
   display:none
